--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.1",
@@ -34,15 +34,12 @@
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-phone-number-input": "^3.4.8",
+    "react-hook-form": "^7.53.1",
     "react-select": "^5.8.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
