--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.1",
     "sharp": "^0.33.5",
