--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.408.0",
+    "moment-timezone": "^0.5.46",
     "next": "14.2.13",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
