--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_WEB_APP_URL=https://dev.zylaxonline.com.au/zylax-api
+# NEXT_PUBLIC_WEB_APP_URL=https://dev.zylaxonline.com.au/zylax-api
+NEXT_PUBLIC_WEB_APP_URL=https://zylax-api.eskydecode.com/api/
